--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,3 +34,23 @@ b {
 ::selection {
   @apply bg-gray-100;
 }
+
+.loader {
+  width: 25px;
+  height: 25px;
+  border: 2px solid #fff;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
